# lp-0016-anon-forum

./: .gitignore  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  demo.sh
.github/workflows/: ci.yml
app/: index.html  module.json  package-lock.json  package.json
app/.claude/: launch.json
app/src/: App.tsx  main.tsx  theme.ts
app/src/api/: index.ts
app/src/components/: ForumCreator.tsx  MemberDashboard.tsx  ModerationHistory.tsx  ModerationPanel.tsx  PostComposer.tsx
circuit/: Cargo.toml
circuit/guest/: Cargo.toml
circuit/guest/src/: main.rs
circuit/src/: lib.rs
cli/: Cargo.toml
cli/src/: daemon.rs  main.rs  waku.rs
docs/: integration.md  protocol.md
moderation-lib/: Cargo.toml
moderation-lib/src/: identity.rs  lib.rs  membership.rs  moderation.rs  slash.rs
registry/: Cargo.toml
registry-lez/: Cargo.toml  registry.idl.json
registry-lez/.cargo/: config.toml
registry-lez/guest/: Cargo.toml
registry-lez/guest/src/: main.rs
registry-lez/nssa_core/: Cargo.toml
registry-lez/nssa_core/src/: circuit_io.rs  commitment.rs  encoding.rs  nullifier.rs  program.rs
registry-lez/runner/: Cargo.toml
registry/guest/: Cargo.toml
registry/guest/src/: main.rs
registry/src/: lib.rs
shamir/: Cargo.toml
shamir/src/: lib.rs
tests/: Cargo.toml
tests/tests/: e2e.rs  membership_proof.rs  moderation_cert.rs  registration.rs  shamir.rs  slash.rs
types/: Cargo.toml
types/src/: lib.rs
