[package]
name    = "forum-anon-circuit"
version = "0.1.0"
edition = "2021"

[package.metadata.risc0]
methods = ["guest"]

[dependencies]
risc0-zkvm     = { workspace = true }
forum-anon-types = { path = "../types" }
borsh          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }

[build-dependencies]
risc0-build = { workspace = true }
