[workspace]
members  = ["guest", "runner", "nssa_core"]
resolver = "2"

[workspace.dependencies]
nssa_core  = { path = "nssa_core" }
borsh      = "1.5"
sha2       = "0.10"
ed25519-dalek = { version = "2", default-features = false, features = ["digest", "alloc"] }
serde      = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
anyhow     = "1"
hex        = "0.4"
tokio      = { version = "1", features = ["full"] }
risc0-zkvm = { version = "3.0.5", features = ["std"] }

