[workspace]

[package]
name    = "forum-anon-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "forum-anon-guest"
path = "src/main.rs"

[dependencies]
risc0-zkvm = { version = "3.0", features = ["std"], default-features = false }
sha2       = { version = "0.10", default-features = false, features = ["oid"] }
borsh      = { version = "1", features = ["derive"], default-features = false }
serde      = { version = "1", features = ["derive"], default-features = false }
