[package]
name    = "forum-anon-registry-lez"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "forum-anon-registry-lez"
path = "src/main.rs"

[dependencies]
nssa_core     = { git = "https://github.com/logos-blockchain/logos-execution-zone.git" }
borsh         = "1.5"
sha2          = { version = "0.10", default-features = false, features = ["oid"] }
ed25519-dalek = { version = "2", default-features = false, features = ["digest", "alloc"] }
serde         = { version = "1", features = ["derive"] }
risc0-zkvm    = { version = "3.0", features = ["std"], default-features = false }
