[package]
name    = "nssa_core"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "3.0.5", features = ["std"] }
borsh      = { version = "1.5", features = ["derive"] }
serde      = { version = "1", features = ["derive"] }
serde_with = "3.16"
thiserror  = "2"
bytemuck   = "1"
bytesize   = { version = "2", features = ["serde"] }
base58     = "0.2"
k256       = { version = "0.13", optional = true }
chacha20   = "0.10"

[dev-dependencies]
serde_json = "1"

[features]
default = []
host    = ["dep:k256"]
