[package]
name    = "forum-registry-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "init-forum"
path = "src/bin/init_forum.rs"

[[bin]]
name = "send-forum-tx"
path = "src/bin/send_forum_tx.rs"

[dependencies]
borsh         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
anyhow        = { workspace = true }
hex           = { workspace = true }
tokio         = { workspace = true }
reqwest       = { version = "0.12", features = ["json"] }
base64        = "0.22"
risc0-zkvm            = { version = "3.0", features = ["std"] }
nssa                  = { git = "https://github.com/logos-blockchain/logos-execution-zone.git" }
common                = { git = "https://github.com/logos-blockchain/logos-execution-zone.git" }
sequencer_service_rpc = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", features = ["client"] }
